# acapy-mydata-did-protocol

./: .flake8  .gitignore  CNAME  LICENSE  README.md  definition.html  manifest.in  pyproject.toml  requirements.txt  setup.py
docs/mydata_did/: index.html
docs/mydata_did/patched_protocols/: index.html
docs/mydata_did/v1_0/: index.html  manager.html  message_types.html
mydata_did/: __init__.py  dispatcher.py
mydata_did/v1_0/: kafka_publisher.py  manager.py  message_types.py  routes.py
mydata_did/v1_0/decorators/: data_agreement_context_decorator.py  patched_decorator_set.py
mydata_did/v1_0/handlers/: connection_request_handler.py  create_did_handler.py  create_did_response_handler.py  da_negotiation_receipt_handler.py  da_permissions_handler.py  data_agreement_negotiation_problem_report_handler.py  data_agreement_negotiation_reject_handler.py  data_agreement_problem_report_handler.py  data_agreement_qr_code_initiate_handler.py  data_agreement_qr_code_problem_report_handler.py  data_agreement_termination_ack_handler.py  (+23 more)
patched_protocols/issue_credential/: index.html
patched_protocols/present_proof/: definition.html
v1_0/decorators/: data_agreement_context_decorator.html  index.html
v1_0/handlers/: data_agreement_negotiation_problem_report_handler.html  data_agreement_problem_report_handler.html  data_agreement_qr_code_initiate_handler.html  data_agreement_qr_code_problem_report_handler.html  data_agreement_termination_ack_handler.html  json_ld_problem_report_handler.html
v1_0/messages/: da_negotiation_receipt.html  data_agreement_accept.html  data_agreement_offer.html  data_agreement_qr_code_problem_report.html  data_agreement_terminate_ack.html  data_controller_details.html  existing_connections.html  json_ld_problem_report.html  json_ld_processed_response.html  problem_report.html  read_did.html
v1_0/models/: data_agreement_negotiation_accept_model.html  data_agreement_negotiation_reject_model.html  data_agreement_qr_code_initiate_model.html  existing_connections_model.html  json_ld_processed_model.html  read_data_agreement_model.html  read_data_agreement_response_model.html
v1_0/routes/: connection_routes.html  data_controller_functions_routes.html  routes.html
v1_0/utils/: index.html  regex.html  service.html
(+273 files in other folders)
